--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,9 @@ datasets = "^2.18.0"
 evaluate = "^0.4.1"
 scikit-learn = "^1.4.1.post1"
 accelerate = "^0.27.2"
+torchtext = "0.6.0"
+spacy = "^3.7.4"
+termcolor = "^2.4.0"
 
 
 [build-system]
